# ov-wag

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  Dockerfile  README.md  conftest.py  dev.yml  docker-compose.yml  manage.py  mkdocs.yml  mmif.py  ov  ov.py  pages.ipynb  pdm.toml  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  settings.py  test.yml  tests.yml  versions.json
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yml  docs.yml  labels.yml  publish.yml  pytest-with-postgres.yml  test-coverage.yml  update.yml
0.4/: 404.html  index.html  sitemap.xml
0.4/dev/: index.html
0.4/dev/docker/: index.html
0.4/dev/fix_AAPBRecords/: index.html
0.4/dev/maintenance/: index.html
0.4/dev/migrate/: index.html
0.4/maintenance/: index.html
0.4/pdm/: index.html
0.4/reference/: index.html
0.4/search/: search_index.json
0.4/setup/: index.html
1.0/: 404.html  index.html  sitemap.xml
1.0/dev/: index.html
1.0/dev/docker/: index.html
1.0/dev/fix_AAPBRecords/: index.html
1.0/dev/maintenance/: index.html
1.0/dev/migrate/: index.html
1.0/reference/: index.html
1.0/setup/: index.html
1.1/: 404.html  index.html  sitemap.xml
1.1/dev/: index.html
1.1/dev/docker/: index.html
1.1/dev/fix_AAPBRecords/: index.html
1.1/dev/maintenance/: index.html
1.1/dev/migrate/: index.html
1.1/reference/: index.html
1.1/search/: search_index.json
1.1/setup/: index.html
1.1/setup/docker/: index.html
aapb_collections/: models.py
aapb_collections/migrations/: 0001_initial.py  0001_initial_aapb_collection.py  0002_aapbcollection_featured_items_and_more.py  0003_alter_aapbcollection_sort_by_and_more.py  0004_alter_aapbcollection_sort_by_and_more.py  0005_alter_aapbcollection_options.py  0006_aapbcollection_display_title.py  0007_alter_aapbcollection_display_title_and_more.py  0008_alter_aapbcollection_content.py  0009_aapbcollection_special_collections_and_more.py
aapb_exhibits/: models.py
aapb_exhibits/migrations/: 0001_initial.py  0002_aapbexhibit_display_title.py  0003_alter_aapbexhibitsorderable_exhibit.py  0004_aapbexhibitschildorder.py  0005_rename_aapbexhibitsorderable_aapbotherexhibits.py  0006_alter_aapbexhibitschildorder_options.py  0007_alter_aapbexhibitschildorder_id_and_more.py  0008_alter_aapbexhibit_body.py  0009_aapbexhibit_special_collections.py
author/: api.py  models.py  serializers.py
author/migrations/: 0002_authorsorderable.py
authors/: admin.py  api.py  blocks.py  models.py  serializers.py  views.py  wagtail_hooks.py  widgets.py
authors/migrations/: 0001_initial.py  0002_authorsorderable.py  0005_aapbauthorsorderable.py  0006_author_title.py
cli/: cli.py  utils.py
client/: index.html
cmless/: __init__.py  models.py  parse.py
docker_entrypoints/: deploy.sh  dev.sh
docs/: dev.md  index.md  maintenance.md  pdm.md  setup.md
docs/dev/: collections.ipynb  docker.md  exhibits.ipynb  fix_AAPBRecords.ipynb  index.md  maintenance.md  migrate-collections.py  migrate-exhibits.py  migrate.md  pages.ipynb
docs/reference/: index.md
docs/setup/: docker.md  index.md
docs/style/: cmd.css
exhibit/: api.py  models.py  serializers.py
exhibit/management/commands/: rename.py
exhibit/migrations/: 0003_exhibitpage_hero_image.py
exhibit/tests/: factories.py  test_exhibit_page.py
exhibits/: api.py  models.py  views.py
exhibits/management/commands/: rename.py
exhibits/migrations/: 0001_initial.py  0002_exhibitpage_cover_image.py  0004_exhibitsorderable.py  0019_alter_exhibitpage_options.py  0020_alter_exhibitpage_options.py  0021_rename_exhibitpage_openvaultexhibit.py  0022_alter_exhibitsorderable_options.py  0023_openvaultexhibit_display_title.py  0024_alter_openvaultexhibit_body.py  0025_openvaultexhibit_special_collections.py
exhibits/tests/: factories.py  test_exhibit_page.py
home/: models.py
home/migrations/: 0003_homepage_body.py  0004_rename_homepage_openvaulthomepage.py  0005_alter_openvaulthomepage_options.py  0006_aapbhomepage.py
latest/: 404.html  index.html  sitemap.xml
latest/reference/: index.html
ov_collections/: api.py  apps.py  blocks.py  factories.py  models.py  tests.py  views.py  wagtail_hooks.py
ov_collections/migrations/: 0010_alter_collection_content.py  0012_alter_collection_aapb_records_and_more.py  0012_remove_collection_aapb_records_and_more.py  0013_remove_collection_aapb_records.py  0021_add_collection_page_model.py  0021_remove_collection_cover_image_and_more.py  0021_rename_collection_collectionpage.py  0022_migrate_collection_to_inheritance.py  0022_rename_collectionpage_openvaultcollection.py  0023_alter_openvaultcollection_options.py  0023_finalize_collection_inheritance.py  0024_openvaultcollection_display_title.py  0025_alter_openvaultcollection_display_title.py  0026_openvaultcollection_special_collections_and_more.py  manual_data_migration.sql  migrate_collection_to_inheritance.sql  rollback_collection_inheritance.sql  verify_before_migration.sql
ov_collections/static/ov_collections/css/: admin.css
ov_collections/templates/ov_collections/block_forms/: aapb_records_block.html
ov_wag/: api.py  asgi.py  hosts.py  middleware.py  serializers.py  urls.py  wsgi.py
ov_wag/settings/: base.py  dev.py  production.py
ov_wag/templates/: base.html
ov_wag/templates/authors/chooser/: results.html
ov_wag/templates/authors/widgets/: author_chooser.html
ov_wag/templates/wagtailadmin/: login.html
ov_wag/tests/: test_api.py  test_env.py  test_health.py
scripts/: db  db-dump  db-init  db-restore  dev  docs-version  init-ov  makemigrations  migrate  migrate-aapb  migrate-stage  psql
search/: views.py
